--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
    <div class="wrapp">
-       
+     <div class="clicks"><p>Total clicks: <span></span></p></div> 
+     <button>Reload</button>
    </div>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="main1.js"></script>
