--- a/level2.html
+++ b/level2.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="level2.css">
 </head>
 
 <body>
-    <script src=""></script>
+   <div class="wrapp">
+        <div class="clicks"><h3>Total clicks: <span>0</span></h3></div> 
+         <button>Refresh</button>
+   </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="level2.js"></script>
 </body>
 </html>
