--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
    <div class="wrapp">
-     <div class="clicks"><p>Total clicks: <span></span></p></div> 
-     <button>Reload</button>
+     <div class="clicks"><h3>Total clicks: <span>0</span></h3></div> 
+     <button>Refresh</button>
    </div>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="main1.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
